; ModuleID = '/home/carl/AnghaBench/git/extr_remote.c_remote_get_1.c'
source_filename = "/home/carl/AnghaBench/git/extr_remote.c_remote_get_1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.branch = type opaque
%struct.remote = type { i32 }

@current_branch = common dso_local global %struct.branch* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.remote* (i8*, i8* (%struct.branch*, i32*)*)* @remote_get_1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.remote* @remote_get_1(i8* %0, i8* (%struct.branch*, i32*)* %1) #0 {
  %3 = alloca %struct.remote*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8* (%struct.branch*, i32*)*, align 8
  %6 = alloca %struct.remote*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* (%struct.branch*, i32*)* %1, i8* (%struct.branch*, i32*)** %5, align 8
  store i32 0, i32* %7, align 4
  %8 = call i32 (...) @read_config()
  %9 = load i8*, i8** %4, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i32 1, i32* %7, align 4
  br label %16

12:                                               ; preds = %2
  %13 = load i8* (%struct.branch*, i32*)*, i8* (%struct.branch*, i32*)** %5, align 8
  %14 = load %struct.branch*, %struct.branch** @current_branch, align 8
  %15 = call i8* %13(%struct.branch* %14, i32* %7)
  store i8* %15, i8** %4, align 8
  br label %16

16:                                               ; preds = %12, %11
  %17 = load i8*, i8** %4, align 8
  %18 = call %struct.remote* @make_remote(i8* %17, i32 0)
  store %struct.remote* %18, %struct.remote** %6, align 8
  %19 = load i8*, i8** %4, align 8
  %20 = call i64 @valid_remote_nick(i8* %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %40

22:                                               ; preds = %16
  %23 = call i64 (...) @have_git_dir()
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %40

25:                                               ; preds = %22
  %26 = load %struct.remote*, %struct.remote** %6, align 8
  %27 = call i32 @valid_remote(%struct.remote* %26)
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %32, label %29

29:                                               ; preds = %25
  %30 = load %struct.remote*, %struct.remote** %6, align 8
  %31 = call i32 @read_remotes_file(%struct.remote* %30)
  br label %32

32:                                               ; preds = %29, %25
  %33 = load %struct.remote*, %struct.remote** %6, align 8
  %34 = call i32 @valid_remote(%struct.remote* %33)
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %39, label %36

36:                                               ; preds = %32
  %37 = load %struct.remote*, %struct.remote** %6, align 8
  %38 = call i32 @read_branches_file(%struct.remote* %37)
  br label %39

39:                                               ; preds = %36, %32
  br label %40

40:                                               ; preds = %39, %22, %16
  %41 = load i32, i32* %7, align 4
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %43, label %51

43:                                               ; preds = %40
  %44 = load %struct.remote*, %struct.remote** %6, align 8
  %45 = call i32 @valid_remote(%struct.remote* %44)
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %51, label %47

47:                                               ; preds = %43
  %48 = load %struct.remote*, %struct.remote** %6, align 8
  %49 = load i8*, i8** %4, align 8
  %50 = call i32 @add_url_alias(%struct.remote* %48, i8* %49)
  br label %51

51:                                               ; preds = %47, %43, %40
  %52 = load %struct.remote*, %struct.remote** %6, align 8
  %53 = call i32 @valid_remote(%struct.remote* %52)
  %54 = icmp ne i32 %53, 0
  br i1 %54, label %56, label %55

55:                                               ; preds = %51
  store %struct.remote* null, %struct.remote** %3, align 8
  br label %58

56:                                               ; preds = %51
  %57 = load %struct.remote*, %struct.remote** %6, align 8
  store %struct.remote* %57, %struct.remote** %3, align 8
  br label %58

58:                                               ; preds = %56, %55
  %59 = load %struct.remote*, %struct.remote** %3, align 8
  ret %struct.remote* %59
}

declare dso_local i32 @read_config(...) #1

declare dso_local %struct.remote* @make_remote(i8*, i32) #1

declare dso_local i64 @valid_remote_nick(i8*) #1

declare dso_local i64 @have_git_dir(...) #1

declare dso_local i32 @valid_remote(%struct.remote*) #1

declare dso_local i32 @read_remotes_file(%struct.remote*) #1

declare dso_local i32 @read_branches_file(%struct.remote*) #1

declare dso_local i32 @add_url_alias(%struct.remote*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
